Remove last remainin deprecated JVM option