@@ -16,7 +16,7 @@ MAINTAINER Joshua Krage <jkrage@guisarme.us>
 ###   FILE_BUILDTOOL sets download location for Spigot's BuildTools
 ###     (default: https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/    BuildTools.jar)
 ###
-ENV JVM_OPTS="-Xms512M -Xmx512M -XX:+AggressiveOpts"
+ENV JVM_OPTS="-Xms512M -Xmx512M"
 ENV SPIGOT_OPTS="nogui --noconsole"
 ENV SPIGOT_REV="1.13.2"
 ENV SPIGOT_BUILD_REV="latest"
